# friday

./: .gitignore  Cargo.toml  Dockerfile  README.md  demo.tape  flake.nix  justfile  maskfile.md  rustfmt.toml  spin.toml
crates/cli/: error.rs  main.rs
crates/custom_http/: Cargo.toml
crates/custom_http/src/: asynchttp.rs  http.rs  http_types.rs
crates/friday/api/: helper.rs  main.rs
crates/friday/cli/: config.rs  main.rs
crates/friday_core/: Cargo.toml
crates/friday_core/src/: lib.rs  manager.rs  repo.rs  section.rs
crates/friday_spin/: Cargo.toml
crates/friday_spin/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: error.rs  lib.rs
crates/server/: main.rs
docs/: demo.tape
nix/: spin.nix
src/: asynchttp.rs  config.rs  error.rs  http.rs  http_types.rs  lib.rs  main.rs  manager.rs  repo.rs  section.rs  threadpool.rs
tests/: cli_integration_test.rs  integration_test.rs
