[package]
name = "friday_spin"
version = "0.1.0"
edition = "2021"

# this lib is only used for spin.
[lib]
crate-type = [ "cdylib" ]

[dependencies]
friday_core = {path = "../friday_core"}
anyhow = "1.0.70"
http = "0.2"
bytes = "1.4.0"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.1.0"}
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba"}
serde_json = "1.0.96"
indexmap = "1.9.3"
