[package]
name = "http"
version = "0.1.0"
edition = "2021"
description = "This is a toy http crate used to learn rust. It should not be used."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4.17"
thiserror = "1.0.40"